--- a/package.json
+++ b/package.json
@@ -1,29 +1,32 @@
 {
-    "name": "hugo-theme-tailwindcss-starter",
-    "version": "0.3.0",
-    "description": "Starter files for a Hugo theme with Tailwindcss",
-    "main": "index.js",
-    "repository": "https://github.com/dirkolbrich/hugo-theme-tailwindcss-starter",
-    "author": "dirkolbrich <github@dirkolbrich.de>",
-    "license": "MIT",
-    "scripts": {
-        "start": "hugo --gc"
-    },
-    "devDependencies": {
-        "@fullhuman/postcss-purgecss": "^4.x",
-        "@tailwindcss/aspect-ratio": "^0.x",
-        "@tailwindcss/forms": "^0.x",
-        "@tailwindcss/line-clamp": "^0.x",
-        "@tailwindcss/typography": "^0.5.0",
-        "autoprefixer": "^10.x",
-        "postcss": "^8.x",
-        "postcss-cli": "^9.x",
-        "tailwindcss": "^3.x"
-    },
-    "browserslist": [
-        "last 1 version",
-        "> 1%",
-        "maintained node versions",
-        "not dead"
-    ]
+  "name": "hugo-theme-tailwindcss-starter",
+  "version": "0.3.0",
+  "description": "Starter files for a Hugo theme with Tailwindcss",
+  "main": "index.js",
+  "repository": "https://github.com/dirkolbrich/hugo-theme-tailwindcss-starter",
+  "author": "dirkolbrich <github@dirkolbrich.de>",
+  "license": "MIT",
+  "scripts": {
+    "start": "hugo --gc",
+    "build:css": "npx tailwindcss -i ./assets-src/css/styles.css -o ./assets/css/dist.css --watch"
+  },
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^4.x",
+    "@tailwindcss/aspect-ratio": "^0.x",
+    "@tailwindcss/forms": "^0.x",
+    "@tailwindcss/line-clamp": "^0.x",
+    "@tailwindcss/typography": "^0.5.0",
+    "autoprefixer": "^10.x",
+    "postcss": "^8.x",
+    "postcss-cli": "^9.x",
+    "prettier": "^2.6.2",
+    "prettier-plugin-go-template": "^0.0.12",
+    "tailwindcss": "^3.x"
+  },
+  "browserslist": [
+    "last 1 version",
+    "> 1%",
+    "maintained node versions",
+    "not dead"
+  ]
 }
