--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "hugo-theme-tailwindcss-starter",
+  "name": "microdotblog-johanl",
   "version": "0.3.0",
   "description": "Starter files for a Hugo theme with Tailwindcss",
   "main": "index.js",
-  "repository": "https://github.com/dirkolbrich/hugo-theme-tailwindcss-starter",
+  "repository": "https://github.com/kottkrig/johanl-theme",
   "author": "dirkolbrich <github@dirkolbrich.de>",
   "license": "MIT",
   "scripts": {
