--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "start": "hugo --gc",
-    "build:css": "npx tailwindcss -i ./assets-src/css/styles.css -o ./assets/css/dist.css --watch"
+    "build:css": "npx tailwindcss -i ./assets-src/css/styles.css -o ./assets/css/dist.css --watch --minify"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^4.x",
